[gd_scene load_steps=8 format=1]

[ext_resource path="res://Scripts/ui.gd" type="Script" id=1]
[ext_resource path="res://Escenas/Pet.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Scripts/generadorpapa.gd" type="Script" id=4]
[ext_resource path="res://Scripts/generadoragua.gd" type="Script" id=5]
[ext_resource path="res://Escenas/inventario.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="UI" type="Node"]

script/script = ExtResource( 1 )

[node name="barraComida" type="ProgressBar" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 13.0
margin/top = 40.0
margin/right = 236.0
margin/bottom = 69.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="barraSed" type="ProgressBar" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 12.0
margin/top = 82.0
margin/right = 235.0
margin/bottom = 111.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="barraCansancio" type="ProgressBar" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 11.0
margin/top = 125.0
margin/right = 234.0
margin/bottom = 154.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="Pet" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 532.027, 460.95 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

transform/pos = Vector2( 534.951, 550.111 )
transform/scale = Vector2( 4.7733, 1.12379 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2.73192, 0, 0, 2.5151, -1.06567, -0.696399 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="StaticBody2D"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]

transform/pos = Vector2( -1.06567, -0.696399 )
transform/scale = Vector2( 2.73192, 2.5151 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="salir" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 821.0
margin/top = 541.0
margin/right = 972.0
margin/bottom = 581.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "SALIR"
flat = false

[node name="papa" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 799.0
margin/top = 20.0
margin/right = 1012.0
margin/bottom = 86.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Comprar Papa"
flat = false
script/script = ExtResource( 4 )

[node name="agua" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 800.0
margin/top = 104.0
margin/right = 1013.0
margin/bottom = 170.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Comprar Agua"
flat = false
script/script = ExtResource( 5 )

[node name="Position2D" type="Position2D" parent="."]

transform/pos = Vector2( 515.267, 23.0483 )
transform/scale = Vector2( 1, 1.00495 )

[node name="Inventario" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 240.0
margin/right = 151.0
margin/bottom = 270.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "INVENTARIO"
flat = false

[node name="inventario_list" parent="Inventario" instance=ExtResource( 6 )]

visibility/visible = false
margin/left = 0.0
margin/top = 37.0
margin/right = 229.0
margin/bottom = 241.0

[connection signal="pressed" from="salir" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="papa" to="papa" method="_on_papa_pressed"]

[connection signal="pressed" from="agua" to="agua" method="_on_agua_pressed"]

[connection signal="pressed" from="Inventario" to="." method="_on_Inventario_pressed"]


